Sigil v0.1.4 <ADD DATE>
    - views can now be zoomed (issue #44)
    - Sigil no longer loads flow-specific CSS... this was causing more harm than good; loading 
    flow-specific CSS will be back in 0.2.0.
    - implemented a NEW workaround for a webkit bug causing the first character of a heading
    created after a chapter break to be displayed incorrectly (issue #78) 
    - fixed issue with TOC editor not resolving HTML entities (issue #125)
    - fixed issue with Tidy changing case of attribute names (issue #120)
    - Sigil will from now on check for a newer version on startup and present an informative
    message if such a version is found (issue #67)
    - made SGF importing MUCH faster (issue #119)
    - provided a window icon on Linux
    - providing binary installers for Windows AND LINUX (issue #6)
    - further improved encoding detection for HTML import
    - fixed graphical misalignment of controls in MetaEditor on Linux and Mac platforms
    - fixed syntax highlighting for XPGT stylesheets
    - fixed rare issue with SGF importing that displayed all body text underlined (issue #118)
    - fixed display of the Sigil chapter break in Book View: the red double-line now
    properly appears after all images (issue #117)
    - added support for importing images referenced in SVG elements in HTML import
    - HTML importing now defaults to a locale-aware codec if one is not detected in the HTML stream;
    previously the fallback codec was UTF-8; this change should improve importing of old HTML
    documents (issue #113)

Sigil v0.1.3 2009.09.02.
    - implemented a work-around for a bug in Qt causing documents with "us-ascii" encoding
    specified in the XML declaration to crash Sigil (issue #109)
    - resource path updating rewritten; should be more robust
    - fixed an issue where EPUB files from Google Books could not be opened (issue #106)
    - fixed regression for storing the folder from which the user last imported an image (issue #105)  